--- a/NutritionQuiz/Info.plist
+++ b/NutritionQuiz/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-8565371860646455~5783915037</string>
+	<key>GADIsAdManagerApp</key>
+	<string>true</string>
 </dict>
 </plist>
