--- a/NutritionQuiz/Info.plist
+++ b/NutritionQuiz/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-8565371860646455~5783915037</string>
+	<key>GADIsAdManagerApp</key>
+	<string>true</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -21,9 +25,9 @@
 			</array>
 		</dict>
 	</dict>
-	<key>GADApplicationIdentifier</key>
-	<string>ca-app-pub-8565371860646455~5783915037</string>
-	<key>GADIsAdManagerApp</key>
-	<string>true</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>LIght</string>
+	<key>CFBundleDisplayName</key>
+	<string>栄養学クイズ</string>
 </dict>
 </plist>
